components dinamycs propertys

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,7 +2,7 @@
     <a href="">
     <div class="big-card__image">
         <img
-        src="https://arquivo.devmedia.com.br/noticias/documentacao/documentacao_angular-cli-como-rodar-testes-e-checar-o-codigo_38248.png"
+        src="{{photoCover}}"
         alt=""
         height="200px"
         >
@@ -10,18 +10,13 @@
 
 
     <div class="big-card__title" >
-        <h1> Saiu a nova versao do Angular</h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
 
     </div>
 
     <div class="big-card__description">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Aliquam venenatis nibh in convallis placerat.
-            Nullam malesuada, nibh bibendum fringilla bibendum,
-            diam urna euismod ex, sed fringilla massa orci et eros.
-            Duis lobortis ante porta nibh tempor, sit amet luctus
-            lacus condimentum.
+            <a href="">{{cardDescription}}</a>
 
         </p>
 
