--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -19,7 +19,14 @@
 .big-card__description p {
     margin-top: 15px;
    color: grey;
+   text-decoration: none;
 }
+
+.big-card__description p a {
+   color: grey;
+
+}
+
 
 .big-card__image img {
     width: 100%;
