--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -4,14 +4,14 @@
 
         <div class="small-card__image">
             <img
-            src="https://cdn.ome.lt/n2nqrMYIEO6iz18q29YC-6QQLfY=/987x0/smart/uploads/conteudo/fotos/lista_google.png"
+            src="{{photoCover}}"
             alt=""
             height=""
             >
         </div>
 
         <div class="small-card__title" >
-            <h1><a href="">Series mais assistidas do ano</a></h1>
+            <h1><a href="">{{cardTitle}}</a></h1>
         </div>
     </div>
 
