created content pages

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,5 @@
 
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
+
 
 <app-menu-title></app-menu-title>
 <div class="container__articles">
@@ -10,6 +8,7 @@
         photoCover="https://static.poder360.com.br/2022/12/selecao-argentina-9.dez_-848x477.jpeg"
         cardTitle="ARGENTINA ENFRENTA CROACIA NA SEMINAL DA COPA DO MUNDO"
         cardDescription="Argentinos passam das quartas de finais apos jogo eletrizante contra a holanda e garantem vaga na semifinal da copa."
+        newsLink="https://www.espn.com.br/futebol/copa-do-mundo/artigo/_/id/11346377/argentina-abre-2-x-0-ve-holanda-buscar-empate-jogada-magica-van-gaal-mas-vence-penaltis-vai-semi-copa-mundo"
         ></app-big-card>
 
 
@@ -18,18 +17,21 @@
         <app-small-card
         cardTitle="ANCELOTTI NA SELECAO?"
         photoCover="https://tntsports.com.br/__export/1670848052735/sites/esporteinterativo/img/2022/12/12/ancelotti_1.jpg"
+        newsLink="https://www.gazetaesportiva.com/times/brasil/ancelotti-e-plano-a-da-cbf-e-diniz-esta-acima-de-portugueses-por-lugar-de-tite-entenda/"
         >
         </app-small-card>
 
         <app-small-card
         cardTitle="CR7 NO QATAR"
         photoCover="https://s2.glbimg.com/YlOuuymiCwgESrBRtZIF15K2y5g=/0x0:3755x2574/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2022/s/U/M3KThWSvmIobXeoIKrKw/2022-10-27t204304z-2106604607-up1eiar1ljqsg-rtrmadp-3-soccer-europa-mun-she-report.jpg"
+        newsLink="https://www.lance.com.br/futebol-internacional/cristiano-ronaldo-e-alvo-do-futebol-do-qatar-diz-jornal.html"
         >
         </app-small-card>
 
         <app-small-card
         cardTitle="JOSE MOURINHO EM ROMA E PORTUGAL"
         photoCover="https://images2.minutemediacdn.com/image/fetch/w_2000,h_2000,c_fit/https%3A%2F%2Ftherealchamps.com%2Fwp-content%2Fuploads%2Fgetty-images%2F2017%2F07%2F1399320595.jpeg"
+        newsLink="https://ge.globo.com/futebol/futebol-internacional/noticia/2022/12/13/portugal-quer-jose-mourinho-como-treinador-apos-eliminacao-na-copa-do-mundo.ghtml"
         >
         </app-small-card>
 
