--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -10,13 +10,13 @@
 
 
     <div class="big-card__title" >
-        <h1><a href="#">{{cardTitle}}</a></h1>
+        <h1><a href="{{newsLink}}">{{cardTitle}}</a></h1>
 
     </div>
 
     <div class="big-card__description">
         <p>
-            <a href="">{{cardDescription}}</a>
+            <a href="{{newsLink}}">{{cardDescription}}</a>
 
         </p>
 
