--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,5 +1,5 @@
 <div class="container__big-card">
-    <a href="">
+    <a [routerLink]="['content', Id]">
     <div class="big-card__image">
         <img
         src="{{photoCover}}"
@@ -10,13 +10,13 @@
 
 
     <div class="big-card__title" >
-        <h1><a href="{{newsLink}}">{{cardTitle}}</a></h1>
+        <h1><a [routerLink]="['content', Id]">{{cardTitle}}</a></h1>
 
     </div>
 
     <div class="big-card__description">
         <p>
-            <a href="{{newsLink}}">{{cardDescription}}</a>
+            <a [routerLink]="['content', Id]">{{cardDescription}}</a>
 
         </p>
 
